--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ I got the Bachelor of Science degree, B.S. (Honored) in Biomedical Engineering a
  <br>
 	  </font> </p>
 </ul>
-	
+<img src="./pic/homepage.jpeg" alt="Research Interests" style="max-width: 100%; height: auto; margin-top: 20px;">	
 	
 	<h2>News</h2>
 <ul>
@@ -205,7 +205,7 @@ I got the Bachelor of Science degree, B.S. (Honored) in Biomedical Engineering a
 		  CityUHK PH8001 (2024) - Guest Lecturer, Classroom, 'Regression models and machine learning models', 1h lecture for graduate students <br>
 		  CityUHK VM2100 (2024) - Guest Lecturer, Classroom, 'Confidence interval and sample size', 2h lecture for undergraduate students <br>
 		  CityUHK VM2100 (2024) - Guest Lecturer, Classroom, 'Study design and Literature review', 2h lecture for undergraduate students <br>
-		  CityUHK VM2100 (2022-2023) - Teaching Assistant, On-Line, 'How comparative genomics and statistical analysis reveal the evolution of Apis laboriosa’ ', 20-min case study for undergraduate students <br>
+		  CityUHK VM2100 (2022-2023) - Teaching Assistant, On-Line, 'How comparative genomics and statistical analysis reveal the evolution of Apis laboriosa', 20-min case study for undergraduate students <br>
 	  </font> </p>
 </ul>
 
