--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ I got the Bachelor of Science degree, B.S. (Honored) in Biomedical Engineering a
  <br>
 	  </font> </p>
 </ul>
-<img src="./pic/homepage.jpeg" alt="Research Interests" style="max-width: 100%; height: auto; margin-top: 20px;">	
+<img src="./pic/homepage.png" alt="Research Interests" style="max-width: 100%; height: auto; margin-top: 20px;">	
 	
 	<h2>News</h2>
 <ul>
