--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@ ga('send', 'pageview');
           	  She got the Bachelor of Science degree, B.S. (Honored) in Biomedical Engineering at Shenzhen University under the supervision of <a href="https://bme.szu.edu.cn/info/1164/1562.htm" target="_blank">Prof. Yongjin Zhou</a> in Jun 2018. <br>
 	  </font> </p>
 </ul> -->
+
+<!-- <h2><font> Research Interests </font></h2>
+<ul style="list-style-type:none">
+	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
+		  <b>Digital animal health:</b> AI-driven early prediction of health and production events in livestock, particularly dairy cows <br>
+		  <b>Bioinformatics:</b> Comparative genomics and metagenomics to study evolution and environmental adaptation in animals, especially honeybees <br>
+		  <b>Gut microbiome:</b> Diet- and drug-driven modulation of gut microbiota in mouse models <br>
+ <br>
+	  </font> </p>
+</ul> -->
+
 <h2><font> Education </font></h2>
 <ul style="list-style-type:none">
 <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
@@ -86,12 +97,11 @@ I got the Bachelor of Science degree, B.S. (Honored) in Biomedical Engineering a
 
 <h2><font> Research Interests </font></h2>
 <ul style="list-style-type:none">
-	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
-		  <b>Digital animal health:</b> AI-driven early prediction of health and production events in livestock, particularly dairy cows <br>
-		  <b>Bioinformatics:</b> Comparative genomics and metagenomics to study evolution and environmental adaptation in animals, especially honeybees <br>
-		  <b>Gut microbiome:</b> Diet- and drug-driven modulation of gut microbiota in mouse models <br>
- <br>
-	  </font> </p>
+<p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
+<b>Digital animal health:</b> AI-driven early prediction of health and production events in livestock, particularly dairy cows <br>
+<b>Bioinformatics:</b> Comparative genomics and metagenomics to study evolution and environmental adaptation in animals, especially honeybees <br>
+<b>Gut microbiome:</b> Diet- and drug-driven modulation of gut microbiota in mouse models <br>
+</font></p>
 </ul>
 <img src="./pic/homepage.png" alt="Research Interests" style="max-width: 100%; height: auto; margin-top: 20px;">	
 	
