--- a/index.html
+++ b/index.html
@@ -89,9 +89,15 @@ ga('send', 'pageview');
 <h2><font> Education </font></h2>
 <ul style="list-style-type:none">
 <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
-I got the Ph.D. in Bioinformatics at City University of Hong Kong under the supervision of <a href="https://www.cityu.edu.hk/ph/staff/prof-jun-li" target="_blank">Prof. Jun Li</a> and <a href="https://www.vet.cornell.edu/research/jessica-mcart-dvm-phd-dabvp-dairy-practice" target="_blank">Prof. Jessica McArt</a> in Feb 2024. <br>
-I got the Master of Science degree, M.S. in Biomedical Engineering at The Chinese University of Hong Kong in Aug 2019. <br>
-I got the Bachelor of Science degree, B.S. (Honored) in Biomedical Engineering at Shenzhen University under the supervision of <a href="https://bme.szu.edu.cn/info/1164/1562.htm" target="_blank">Prof. Yongjin Zhou</a> in Jun 2018. <br>
+	<li>
+		I got the Ph.D. in Bioinformatics at City University of Hong Kong under the supervision of <a href="https://www.cityu.edu.hk/ph/staff/prof-jun-li" target="_blank">Prof. Jun Li</a> and <a href="https://www.vet.cornell.edu/research/jessica-mcart-dvm-phd-dabvp-dairy-practice" target="_blank">Prof. Jessica McArt</a> in Feb 2024. 
+	</li>
+	<li>
+		I got the Master of Science degree, M.S. in Biomedical Engineering at The Chinese University of Hong Kong in Aug 2019. 
+	</li>
+	<li>
+		I got the Bachelor of Science degree, B.S. (Honored) in Biomedical Engineering at Shenzhen University under the supervision of <a href="https://bme.szu.edu.cn/info/1164/1562.htm" target="_blank">Prof. Yongjin Zhou</a> in Jun 2018. 
+	</li>
 </font></p>
 </ul>
 
