--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@ ga('send', 'pageview');
 	</tr></tbody>
 </table>
 
-<!-- <h2>Biography </h2>
+<h2>Biography </h2>
 <p>
-	I am a postdoc at Cornell University under the supervision of <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Dr. Jessica McArt</a> . Our work is committed to advancing Digital Animal Health, a proactive approach to animal healthcare that aims to promote their healthier lives before diseases manifest. 
-</p> -->
+	I am a postdoc at Cornell University under the supervision of <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Prof. Jessica McArt</a> . Our work is committed to advancing Digital Animal Health, a proactive approach to animal healthcare that aims to promote their healthier lives before diseases manifest. 
+</p>
 <!-- <h2><font> Education </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
