--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@ ga('send', 'pageview');
 <h2><font> Review Services </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
-		  Preventive Veterinary Medicine (1), BMC Bioinformatics (1) <br>
+		  Preventive Veterinary Medicine (1), BMC Bioinformatics (1), Computers and Electronics in Agriculture (1)
+ <br>
 	  </font> </p>
 </ul>
 	
