--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ dl862@cornell.edu
 		<span class="pub-title">Predicting postpartum diseases in Holstein cows using milk spectra and machine learning – retrospective assessment from diagnosis date</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
 		<span class="pub-status">[In revision]</span>
-		[<a href="https://milk-ftir.github.io/">website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Health-Prediction-Project">code</a>]
+		[<a href="https://milk-ftir.github.io/">website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Health-Prediction-Project">code</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir1.pdf">poster</a>]
 	  </td>
 	</tr>
   </table>
@@ -97,7 +97,7 @@ dl862@cornell.edu
 		<span class="pub-title">Prediction and classification of metritis and mastitis in Holstein cows using transition milk spectra and machine learning – prospective assessment following parturition</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
 		<span class="pub-status">[In revision]</span>
-		[<a href="https://milk-ftir.github.io/">website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Metritis-Mastitis-Project">code</a>]
+		[<a href="https://milk-ftir.github.io/">website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Metritis-Mastitis-Project">code</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir2.pdf">poster</a>]
 	  </td>
 	</tr>
   </table>
