--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ dl862@cornell.edu
 				</span>
 				<span class="pub-title">SynLS: a diffusion-transformer framework for generating high-quality wearable sensor time series data validated in livestock monitoring</span><br>
 				<i class="pub-highlight">biorxiv</i>
-				[<a href="https://academic.oup.com/gbe/article/13/10/evab227/6380142?login=false">paper</a>][<a href="https://huggingface.co/spaces/danlin1128/synls">website</a>][<a href="https://github.com/lindan1128/SynLS">code</a>]
+				[<a href="https://academic.oup.com/gbe/article/13/10/evab227/6380142?login=false">paper</a>][<a href="https://huggingface.co/spaces/danlin1128/synls">website</a>]
 			  </td>
 			</tr>
 		  </table>
@@ -204,7 +204,6 @@ dl862@cornell.edu
 				<span class="pub-title">A Generative Foundation Model for Chest Radiography</span><br>
 				<i class="pub-highlight">Nature Health</i>
 				<span class="pub-status">[Under review]</span>
-				[<a href="https://anonymous.4open.science/r/anonymous-chexgen">code</a>]
 			  </td>
 			</tr>
 		  </table>
