--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@ dl862@cornell.edu
 	</a>
 </p> -->
 
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=TQPEFe8npaOD-qAfoU4ydKM7B2BNe3KpRAodZSRJ_Rg&cl=ffffff&w=a"></script>
+<!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=TQPEFe8npaOD-qAfoU4ydKM7B2BNe3KpRAodZSRJ_Rg&cl=ffffff&w=a"></script> -->
 
 <p><center><font>
-        <br>&copy; Dan Lin | Last updated: Apr. 2025</font></center>
+        <br>&copy; Dan Lin | Last updated: May. 2025</font></center>
 </p>
 
 </div>
