--- a/index.html
+++ b/index.html
@@ -241,12 +241,11 @@ dl862@cornell.edu
 </ul>
 
 <h2><font> Review Services </font></h2>
-<ul style="list-style-type:none">
-		  Preventive Veterinary Medicine (1), BMC Bioinformatics (1), Computers and Electronics in Agriculture (1)
+<ul class="teaching-list">
+Preventive Veterinary Medicine (1), BMC Bioinformatics (1), Computers and Electronics in Agriculture (1)
  <br>
 	  </font> </p>
 </ul>
-<br>
 <br>
 
 <!-- <p align=right>
