--- a/index.html
+++ b/index.html
@@ -241,11 +241,8 @@ dl862@cornell.edu
 </ul>
 
 <h2><font> Review Services </font></h2>
-<ul class="teaching-list">
-Preventive Veterinary Medicine (1), BMC Bioinformatics (1), Computers and Electronics in Agriculture (1)
- <br>
-	  </font> </p>
-</ul>
+<p style="margin-left: 0; font-size: 1.08em; color: #636161; line-height: 1.7;">Preventive Veterinary Medicine (1), BMC Bioinformatics (1), Computers and Electronics in Agriculture (1)</p>
+<br>
 <br>
 
 <!-- <p align=right>
