--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ dl862@cornell.edu
 				</span>
 				<span class="pub-title">SynLS: a diffusion-transformer framework for generating high-quality wearable sensor time series data validated in livestock monitoring</span><br>
 				<i class="pub-highlight">biorxiv</i>
-				[<a href="https://academic.oup.com/gbe/article/13/10/evab227/6380142?login=false">paper</a>][<a href="https://huggingface.co/spaces/danlin1128/synls">website</a>]
+				[<a href="">paper</a>][<a href="https://huggingface.co/spaces/danlin1128/synls">website</a>]
 			  </td>
 			</tr>
 		  </table>
