--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ dl862@cornell.edu
 		<span class="pub-title">Predicting postpartum diseases in Holstein cows using milk spectra and machine learning – retrospective assessment from diagnosis date</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
 		<span class="pub-status">[In revision]</span>
-		[<a href="https://milk-ftir.github.io/">website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Health-Prediction-Project">code</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir1.pdf">poster</a>]
+		[<a href="https://milk-ftir.github.io/">project website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Health-Prediction-Project">code</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir1.pdf">poster</a>]
 	  </td>
 	</tr>
   </table>
@@ -97,7 +97,7 @@ dl862@cornell.edu
 		<span class="pub-title">Prediction and classification of metritis and mastitis in Holstein cows using transition milk spectra and machine learning – prospective assessment following parturition</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
 		<span class="pub-status">[In revision]</span>
-		[<a href="https://milk-ftir.github.io/">website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Metritis-Mastitis-Project">code</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir2.pdf">poster</a>]
+		[<a href="https://milk-ftir.github.io/">project website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Metritis-Mastitis-Project">code</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir2.pdf">poster</a>]
 	  </td>
 	</tr>
   </table>
@@ -187,7 +187,7 @@ dl862@cornell.edu
 				</span>
 				<span class="pub-title">SynLS: a diffusion-transformer framework for generating high-quality wearable sensor time series data validated in livestock monitoring</span><br>
 				<i class="pub-highlight">biorxiv</i>
-				[<a href="">paper</a>][<a href="https://huggingface.co/spaces/danlin1128/synls">website</a>]
+				[<a href="">paper</a>][<a href="https://huggingface.co/spaces/danlin1128/synls">project website</a>]
 			  </td>
 			</tr>
 		  </table>
