--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ dl862@cornell.edu
 				</span>
 				<span class="pub-title">SynLS: a diffusion-transformer framework for generating high-quality wearable sensor time series data validated in livestock monitoring</span><br>
 				<i class="pub-highlight">biorxiv</i>
-				[<a href="">paper</a>][<a href="https://huggingface.co/spaces/danlin1128/synls">project website</a>]
+				[<a href="https://www.biorxiv.org/content/10.1101/2025.05.11.653212v1">preprint</a>][<a href="https://huggingface.co/spaces/danlin1128/synls">project website</a>]
 			  </td>
 			</tr>
 		  </table>
