--- a/index.html
+++ b/index.html
@@ -179,22 +179,6 @@ dl862@cornell.edu
 		<table class="pub-table">
 			<tr>
 			  <td class="pub-img">
-				<img src="pic/gan.png" width="185px" height = "100" style="box-shadow: 2px 2px 6px #888; border-radius: 6px;">
-			  </td>
-			  <td class="pub-info">
-				<span class="pub-authors">
-				  <i class="pub-highlight">Dan Lin#</i>, Yuanfeng Ji#, Jessica McArt, Jun Li.
-				</span>
-				<span class="pub-title">SynLS: a diffusion-transformer framework for generating high-quality wearable sensor time series data validated in livestock monitoring</span><br>
-				<i class="pub-highlight">biorxiv</i>
-				[<a href="https://www.biorxiv.org/content/10.1101/2025.05.11.653212v1">preprint</a>][<a href="https://huggingface.co/spaces/danlin1128/synls">project website</a>]
-			  </td>
-			</tr>
-		  </table>
-
-		  <table class="pub-table">
-			<tr>
-			  <td class="pub-img">
 				<img src="pic/chex.png" width="185px" height = "100" style="box-shadow: 2px 2px 6px #888; border-radius: 6px;">
 			  </td>
 			  <td class="pub-info">
@@ -204,6 +188,22 @@ dl862@cornell.edu
 				<span class="pub-title">A Generative Foundation Model for Chest Radiography</span><br>
 				<i class="pub-highlight">Nature Health</i>
 				<span class="pub-status">[Under review]</span>
+			  </td>
+			</tr>
+		  </table>
+		
+		<table class="pub-table">
+			<tr>
+			  <td class="pub-img">
+				<img src="pic/gan.png" width="185px" height = "100" style="box-shadow: 2px 2px 6px #888; border-radius: 6px;">
+			  </td>
+			  <td class="pub-info">
+				<span class="pub-authors">
+				  <i class="pub-highlight">Dan Lin#</i>, Yuanfeng Ji#, Jessica McArt, Jun Li.
+				</span>
+				<span class="pub-title">SynLS: A novel diffusion-transformer framework for generating high-quality wearable sensor time series data to enhance health monitoring</span><br>
+				<i class="pub-highlight">biorxiv</i>
+				[<a href="https://www.biorxiv.org/content/10.1101/2025.05.11.653212v1">preprint</a>][<a href="https://huggingface.co/spaces/danlin1128/synls">project website</a>]
 			  </td>
 			</tr>
 		  </table>
