--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@ dl862@cornell.edu
 				</span>
 				<span class="pub-title">SynLS: A novel diffusion-transformer framework for generating high-quality wearable sensor time series data to enhance health monitoring</span><br>
 				<i class="pub-highlight">biorxiv</i>
+				<span class="pub-status">[In preparation]</span>
 				[<a href="https://www.biorxiv.org/content/10.1101/2025.05.11.653212v1">preprint</a>][<a href="https://huggingface.co/spaces/danlin1128/synls">project website</a>]
 			  </td>
 			</tr>
