--- a/index.html
+++ b/index.html
@@ -227,19 +227,19 @@ dl862@cornell.edu
   <li>Visiting undergraduate student, Chinese Academy of Sciences (ShenZhen), Jan 2017 – Nov 2017</li>
 </ul>
 
-	<h2><font> Professional Memberships </font></h2>
+<h2><font> Selected Honors </font></h2>
+<ul class="teaching-list">
+  <li>Institutional Research Tuition Scholarship, City University of Hong Kong, 2022</li>
+  <li>Dean's List Award, The Chinese University of Hong Kong, 2019</li>
+  <li>Distinguished Graduate, Shenzhen University, 2018</li>
+</ul>
+
+<h2><font> Professional Memberships </font></h2>
 <ul class="teaching-list">
   <li>American Dairy Science Association, 2024 – Present</li>
   <li>American Society for Microbiology, 2025 – Present</li>
   <li>Chinese Association of Animal Science and Veterinary Medicine, 2024 – Present</li>
   <li>Chinese Association for Artificial Intelligence, 2024 – Present</li>
-</ul>
-
-<h2><font> Selected Honors and Awards </font></h2>
-<ul class="teaching-list">
-  <li>Institutional Research Tuition Scholarship, City University of Hong Kong, 2022</li>
-  <li>Dean's List Award, The Chinese University of Hong Kong, 2019</li>
-  <li>Distinguished Graduate, Shenzhen University, 2018</li>
 </ul>
 
 <h2><font> Review Services </font></h2>
