--- a/index.html
+++ b/index.html
@@ -212,6 +212,55 @@ dl862@cornell.edu
 		  </table>
 
 
+	<div class="pv1" id="ccgp">
+		<h3>My undergraduate work</h3>
+	  
+		<table class="pub-table">
+			<tr>
+			  <td class="pub-img">
+				<img src="pic/kero.jpg" width="185px" height = "100" style="box-shadow: 2px 2px 6px #888; border-radius: 6px;">
+			  </td>
+			  <td class="pub-info">
+				<span class="pub-authors">
+					<i class="pub-highlight">Dan Lin</i>, Lei Tian, Shu Zhang, Like Wang, Ying Jie, Yongjin Zhou.
+				</span>
+				<span class="pub-title">Keratoconus Diagnosis: Validation of a Novel Parameter Set Derived from IOP-Matched Scenario</span><br>
+				[<a href="https://www.hindawi.com/journals/joph/2020/6530279/">paper</a>]
+			  </td>
+			</tr>
+		  </table>
+
+		<table class="pub-table">
+			<tr>
+			  <td class="pub-img">
+				<img src="pic/bone.jpg" width="185px" height = "100" style="box-shadow: 2px 2px 6px #888; border-radius: 6px;">
+			  </td>
+			  <td class="pub-info">
+				<span class="pub-authors">
+					Yuanfeng Ji, Hao Chen, <i class="pub-highlight">Dan Lin</i>, Xiaohua Wu, Di Lin.
+				</span>
+				<span class="pub-title">PRSNet : Part Relation and Selection Network for Bone Age Assessment</span><br>
+				[<a href="https://arxiv.org/abs/1909.05651">paper</a>]
+			  </td>
+			</tr>
+		  </table>
+
+		<table class="pub-table">
+			<tr>
+			  <td class="pub-img">
+				<img src="pic/fall.jpg" width="185px" height = "100" style="box-shadow: 2px 2px 6px #888; border-radius: 6px;">
+			  </td>
+			  <td class="pub-info">
+				<span class="pub-authors">
+					Shengyun Liang, Tianyue Chu, <i class="pub-highlight">Dan Lin</i>, Yunkun Ning, Huiqi Li, Guoru Zhao.
+				</span>
+				<span class="pub-title">Pre-impact Alarm System for Fall Detection Using MEMS Sensors and HMM-based SVM Classifier</span><br>
+				[<a href="ttps://ieeexplore.ieee.org/document/8513119">paper</a>]
+			  </td>
+			</tr>
+		  </table>
+
+
 <h2><font> Teaching </font></h2>
 <ul class="teaching-list">
   <li>CityUHK PH8001 (2024) - Guest Lecturer, Classroom, 'Experimental designs', 1h lecture for graduate students</li>
