--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ dl862@cornell.edu
 	  </td>
 	  <td class="pub-info">
 		<span class="pub-authors">
-		  <i class="pub-highlight">Dan Lin</i>, Jessica McArt.
+		  <i class="pub-highlight">Dan Lin</i>, Jessica McArt. (2025).
 		</span>
 		<span class="pub-title">Prediction and classification of metritis and mastitis in Holstein cows using transition milk spectra and machine learning – prospective assessment following parturition</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
@@ -91,7 +91,7 @@ dl862@cornell.edu
 	  </td>
 	  <td class="pub-info">
 		<span class="pub-authors">
-		  <i class="pub-highlight">Dan Lin</i>, Jun Li, Jackson Seminara, Jessica McArt.
+		  <i class="pub-highlight">Dan Lin</i>, Jun Li, Jackson Seminara, Jessica McArt. (2025).
 		</span>
 		<span class="pub-title">Predicting postpartum diseases in Holstein cows using milk spectra and machine learning – retrospective assessment from diagnosis date</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
@@ -109,7 +109,7 @@ dl862@cornell.edu
 	  </td>
 	  <td class="pub-info">
 		<span class="pub-authors">
-		  <i class="pub-highlight">Dan Lin</i>, Ákos Kenéz, Jessica McArt, Jun Li.
+		  <i class="pub-highlight">Dan Lin</i>, Ákos Kenéz, Jessica McArt, Jun Li. (2023).
 		</span>
 		<span class="pub-title">Transformer Neural Network to Predict and Interpret Pregnancy Loss from Activity Data in Holstein Dairy Cows</span><br>
 		<i class="pub-highlight">Computers and Electronics in Agriculture</i>
@@ -130,7 +130,7 @@ dl862@cornell.edu
 		  </td>
 		  <td class="pub-info">
 			<span class="pub-authors">
-			  <i class="pub-highlight">Dan Lin</i>, Lan Lan, Tingting Zheng, Peng Shi, Jinshan Xu, Jun Li.
+			  <i class="pub-highlight">Dan Lin</i>, Lan Lan, Tingting Zheng, Peng Shi, Jinshan Xu, Jun Li. (2021).
 			</span>
 			<span class="pub-title">Comparative Genomics Reveals Recent Adaptive Evolution in Himalayan Giant Honeybee Apis laboriosa</span><br>
 			<i class="pub-highlight">Genome Biology and Evolution</i>
@@ -146,7 +146,7 @@ dl862@cornell.edu
 		  </td>
 		  <td class="pub-info">
 			<span class="pub-authors">
-				Qiuwen He, Jiating Huang, Tingting Zheng, <i class="pub-highlight">Dan Lin</i>, Heping Zhang, Jun Li, Zhihong Sun.
+				Qiuwen He, Jiating Huang, Tingting Zheng, <i class="pub-highlight">Dan Lin</i>, Heping Zhang, Jun Li, Zhihong Sun. (2021).
 			</span>
 			<span class="pub-title">Treatment with mixed probiotics induced enhanced and diversified modulation of the gut microbiome of healthy rats</span><br>
 			<i class="pub-highlight">FEMS Microbiology Ecology</i>
@@ -162,7 +162,7 @@ dl862@cornell.edu
 		  </td>
 		  <td class="pub-info">
 			<span class="pub-authors">
-				Kwun Kwan Lo, Junsheng He, <i class="pub-highlight">Dan Lin</i>, Felicianna, Hoi Kit Matthew Leung, Fangfei Zhang, Marsena Jasiel Ismaiah, Hani El-Nezami, Jun Li.
+				Kwun Kwan Lo, Junsheng He, <i class="pub-highlight">Dan Lin</i>, Felicianna, Hoi Kit Matthew Leung, Fangfei Zhang, Marsena Jasiel Ismaiah, Hani El-Nezami, Jun Li. (2025).
 			</span>
 			<span class="pub-title">Theabrownin-induced Bifidobacterium pseudolongum enrichment mitigates experimental colitis in mice</span><br>
 			<i class="pub-highlight">npj Science of Food</i>
@@ -185,7 +185,7 @@ dl862@cornell.edu
 			  </td>
 			  <td class="pub-info">
 				<span class="pub-authors">
-					Yuanfeng Ji#, <i class="pub-highlight">Dan Lin#</i>, Xiyue Wang#, Lu Zhang, Wenhui Zhou, Congjian Ge, Ruihang Chu, Xiaoli Yang, Junhan Zhao, Junsong Chen, Xiangde Luo, Sen Yang, Jin Fang, Ping Luo, Ruijiang Li.
+					Yuanfeng Ji#, <i class="pub-highlight">Dan Lin#</i>, Xiyue Wang#, Lu Zhang, Wenhui Zhou, Congjian Ge, Ruihang Chu, Xiaoli Yang, Junhan Zhao, Junsong Chen, Xiangde Luo, Sen Yang, Jin Fang, Ping Luo, Ruijiang Li. (2025).
 				</span>
 				<span class="pub-title">A Generative Foundation Model for Chest Radiography</span><br>
 				<i class="pub-highlight">Nature Health</i>
@@ -201,7 +201,7 @@ dl862@cornell.edu
 			  </td>
 			  <td class="pub-info">
 				<span class="pub-authors">
-				  <i class="pub-highlight">Dan Lin#</i>, Yuanfeng Ji#, Jessica McArt, Jun Li.
+				  <i class="pub-highlight">Dan Lin#</i>, Yuanfeng Ji#, Jessica McArt, Jun Li. (2025).
 				</span>
 				<span class="pub-title">SynLS: A novel diffusion-transformer framework for generating high-quality wearable sensor time series data to enhance health monitoring</span><br>
 				<i class="pub-highlight">biorxiv</i>
@@ -222,9 +222,10 @@ dl862@cornell.edu
 			  </td>
 			  <td class="pub-info">
 				<span class="pub-authors">
-					<i class="pub-highlight">Dan Lin</i>, Lei Tian, Shu Zhang, Like Wang, Ying Jie, Yongjin Zhou.
+					<i class="pub-highlight">Dan Lin</i>, Lei Tian, Shu Zhang, Like Wang, Ying Jie, Yongjin Zhou. (2019).
 				</span>
 				<span class="pub-title">Keratoconus Diagnosis: Validation of a Novel Parameter Set Derived from IOP-Matched Scenario</span><br>
+				<i class="pub-highlight">Journal of Ophthalmology</i>
 				[<a href="https://www.hindawi.com/journals/joph/2020/6530279/">paper</a>]
 			  </td>
 			</tr>
@@ -237,9 +238,10 @@ dl862@cornell.edu
 			  </td>
 			  <td class="pub-info">
 				<span class="pub-authors">
-					Yuanfeng Ji, Hao Chen, <i class="pub-highlight">Dan Lin</i>, Xiaohua Wu, Di Lin.
+					Yuanfeng Ji, Hao Chen, <i class="pub-highlight">Dan Lin</i>, Xiaohua Wu, Di Lin. (2019).
 				</span>
 				<span class="pub-title">PRSNet : Part Relation and Selection Network for Bone Age Assessment</span><br>
+				<i class="pub-highlight">MICCAI 2019</i>
 				[<a href="https://arxiv.org/abs/1909.05651">paper</a>]
 			  </td>
 			</tr>
@@ -252,9 +254,10 @@ dl862@cornell.edu
 			  </td>
 			  <td class="pub-info">
 				<span class="pub-authors">
-					Shengyun Liang, Tianyue Chu, <i class="pub-highlight">Dan Lin</i>, Yunkun Ning, Huiqi Li, Guoru Zhao.
+					Shengyun Liang, Tianyue Chu, <i class="pub-highlight">Dan Lin</i>, Yunkun Ning, Huiqi Li, Guoru Zhao. (2018).
 				</span>
 				<span class="pub-title">Pre-impact Alarm System for Fall Detection Using MEMS Sensors and HMM-based SVM Classifier</span><br>
+				<i class="pub-highlight">In 2018 40th Annual International Conference of the IEEE EMBC</i>
 				[<a href="ttps://ieeexplore.ieee.org/document/8513119">paper</a>]
 			  </td>
 			</tr>
