--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ dl862@cornell.edu
 
 
 <div class="pv1" id="ccgp">
-  <h3>AI-Driven Health Monitoring in Dairy Cows</h3>
+  <h3>AI-Driven Health Monitoring in Animals</h3>
 
-  <p> One of my primary research programs focuses on using machine and deep learning to improve health prediction and monitoring in dairy cows. I have developed predictive models that leverage wearable sensor time-series (e.g., activity, rumination) and milk FTIR spectra to detect early signs of key health events and postpartum diseases in Holstein cows, including pregnancy loss, metritis, and mastitis. These efforts aim to support non-invasive, data-driven decision-making in dairy herd management and enhance early intervention strategies. Check our key publications:</p>
+  <p> One of my primary research programs focuses on using AI models (machine and deep learning) to improve health prediction and monitoring in dairy cows. I have developed predictive models that leverage wearable sensor time-series (e.g., activity, rumination) and milk FTIR spectra to detect early signs of key health events and postpartum diseases in Holstein cows, including pregnancy loss, metritis, and mastitis. These efforts aim to support non-invasive, data-driven decision-making in dairy herd management and enhance early intervention strategies. Check our key publications:</p>
 
   <table class="pub-table">
 	<tr>
@@ -79,7 +79,7 @@ dl862@cornell.edu
 		<span class="pub-title">Prediction and classification of metritis and mastitis in Holstein cows using transition milk spectra and machine learning – prospective assessment following parturition</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
 		<span class="pub-status">[In revision]</span>
-		[<a href="https://milk-ftir.github.io/">project website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Metritis-Mastitis-Project">code</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir2.pdf">poster</a>]
+		[<a href="https://milk-ftir.github.io/">project website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Metritis-Mastitis-Project">code</a>] [<a href="https://dan-lin.shinyapps.io/milk-ftir-downsample">shiny app</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir2.pdf">poster</a>]
 	  </td>
 	</tr>
   </table>
