--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ dl862@cornell.edu
 		<span class="pub-authors">
 		  <i class="pub-highlight">Dan Lin</i>, Jessica McArt. (2025).
 		</span>
-		<span class="pub-title">Prediction and classification of metritis and mastitis in Holstein cows using transition milk spectra and machine learning – prospective assessment following parturition</span><br>
+		<span class="pub-title">Prediction and classification of metritis and mastitis in Holstein cows using transition milk spectra under different modeling strategies – prospective assessment following parturition</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
 		<span class="pub-status">[In revision]</span>
 		[<a href="https://milk-ftir.github.io/">project website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Metritis-Mastitis-Project">code</a>] [<a href="https://dan-lin.shinyapps.io/milk-ftir-downsample">shiny app</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir2.pdf">poster</a>]
