--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ dl862@cornell.edu
   <p><span class="blue-bold">Short bio:</span> My current affiliation is a Postdoctoral Scholar in <a href="https://blogs.cornell.edu/jessmcartlab/" class="blue-link" target="_blank">McArt Dairy Cow Lab</a> at Cornell University. I completed my Ph.D. in Bioinformatics at City University of Hong Kong in Spring 2024, under the CityU–Cornell collaborative Interdisciplinary PhD program (advisors: Drs. <a href="https://www.cityu.edu.hk/ph/staff/prof-jun-li" class="blue-link" target="_blank">Jun Li</a> and <a href="https://www.vet.cornell.edu/research/jessica-mcart-dvm-phd-dabvp-dairy-practice" class="blue-link" target="_blank">Jessica McArt</a>). Before that, I received my master's degree in Biomedical Engineering from The Chinese University of Hong Kong in 2019, and my bachelor's degree in Biomedical Engineering from Shenzhen University in 2018.
   </p>
 
+<img src="./pic/my.jpeg" alt="About me" style="max-width: 70%; height: auto; margin-top: 20px;">
 
 <h2 class="mt5" id="research">Research</h2>
 
