--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ dl862@cornell.edu
 			</span>
 			<span class="pub-title">Theabrownin-induced Bifidobacterium pseudolongum enrichment mitigates experimental colitis in mice</span><br>
 			<i class="pub-highlight">npj Science of Food</i>
-			<span class="pub-status">[Under review]</span>
+			<span class="pub-status">[In revision]</span>
 		  </td>
 		</tr>
 	  </table>
