--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ dl862@cornell.edu
 		</span>
 		<span class="pub-title">Prediction and classification of metritis and mastitis in Holstein cows using transition milk spectra under different modeling strategies – prospective assessment following parturition</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
-		<span class="pub-status">[In revision]</span>
+		<span class="pub-status">[Accepted]</span>
 		[<a href="https://milk-ftir.github.io/">project website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Metritis-Mastitis-Project">code</a>] [<a href="https://dan-lin.shinyapps.io/milk-ftir-downsample">shiny app</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir2.pdf">poster</a>]
 	  </td>
 	</tr>
@@ -96,7 +96,7 @@ dl862@cornell.edu
 		</span>
 		<span class="pub-title">Predicting postpartum diseases in Holstein cows using milk spectra and machine learning – retrospective assessment from diagnosis date</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
-		<span class="pub-status">[In revision]</span>
+		<span class="pub-status">[Accepted]</span>
 		[<a href="https://milk-ftir.github.io/">project website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Health-Prediction-Project">code</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir1.pdf">poster</a>]
 	  </td>
 	</tr>
@@ -189,7 +189,7 @@ dl862@cornell.edu
 					Yuanfeng Ji#, <i class="pub-highlight">Dan Lin#</i>, Xiyue Wang#, Lu Zhang, Wenhui Zhou, Congjian Ge, Ruihang Chu, Xiaoli Yang, Junhan Zhao, Junsong Chen, Xiangde Luo, Sen Yang, Jin Fang, Ping Luo, Ruijiang Li. (2025).
 				</span>
 				<span class="pub-title">A Generative Foundation Model for Chest Radiography</span><br>
-				<i class="pub-highlight">Nature Health</i>
+				<i class="pub-highlight">NEJM AI</i>
 				<span class="pub-status">[Under review]</span>
 			  </td>
 			</tr>
