--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@ dl862@cornell.edu
 		<span class="pub-authors">
 		  <i class="pub-highlight">Dan Lin</i>, Jessica McArt. (2025).
 		</span>
-		<span class="pub-title">Prediction and classification of metritis and mastitis in Holstein cows using transition milk spectra under different modeling strategies – prospective assessment following parturition</span><br>
+		<span class="pub-title">Prediction and classification of metritis and mastitis in Holstein cows using transition milk spectra under different modeling strategies</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
-		<span class="pub-status">[Accepted]</span>
-		[<a href="https://milk-ftir.github.io/">project website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Metritis-Mastitis-Project">code</a>] [<a href="https://dan-lin.shinyapps.io/milk-ftir-downsample">shiny app</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir2.pdf">poster</a>]
+		[<a href="https://www.sciencedirect.com/science/article/pii/S0022030225007763">paper</a>][<a href="https://milk-ftir.github.io/">project website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Metritis-Mastitis-Project">code</a>] [<a href="https://dan-lin.shinyapps.io/milk-ftir-downsample">shiny app</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir2.pdf">poster</a>]
 	  </td>
 	</tr>
   </table>
@@ -96,8 +95,7 @@ dl862@cornell.edu
 		</span>
 		<span class="pub-title">Predicting postpartum diseases in Holstein cows using milk spectra and machine learning – retrospective assessment from diagnosis date</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
-		<span class="pub-status">[Accepted]</span>
-		[<a href="https://milk-ftir.github.io/">project website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Health-Prediction-Project">code</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir1.pdf">poster</a>]
+		[<a href="https://www.sciencedirect.com/science/article/pii/S0022030225007921">paper</a>][<a href="https://milk-ftir.github.io/">project website</a>] [<a href="https://github.com/lindan1128/Milk-FTIR-Spectra-Health-Prediction-Project">code</a>] [<a href="https://github.com/lindan1128/lindan1128.github.io/blob/main/pic/ftir1.pdf">poster</a>]
 	  </td>
 	</tr>
   </table>
@@ -190,7 +188,7 @@ dl862@cornell.edu
 				</span>
 				<span class="pub-title">A Generative Foundation Model for Chest Radiography</span><br>
 				<i class="pub-highlight">NEJM AI</i>
-				<span class="pub-status">[Under review]</span>
+				<span class="pub-status">[In revision]</span>
 			  </td>
 			</tr>
 		  </table>
@@ -311,7 +309,7 @@ dl862@cornell.edu
 <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=TQPEFe8npaOD-qAfoU4ydKM7B2BNe3KpRAodZSRJ_Rg&cl=ffffff&w=a"></script> -->
 
 <p><center><font>
-        <br>&copy; Dan Lin | Last updated: Aug. 2025</font></center>
+        <br>&copy; Dan Lin | Last updated: Sep. 2025</font></center>
 </p>
 
 </div>
