Change publication status from 'Accepted' to 'In revision'

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ dl862@cornell.edu
 				</span>
 				<span class="pub-title">A Generative Foundation Model for Chest Radiography</span><br>
 				<i class="pub-highlight">NEJM AI</i>
-				<span class="pub-status">[Accepted!]</span>
+				<span class="pub-status">[In revision]</span>
 			  </td>
 			</tr>
 		  </table>
