Add Google Scholar link to index.html
Added Google Scholar link to contact section.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ dl862@cornell.edu
   <a href="https://www.linkedin.com/in/dan-lin-13bb99289/" target="_blank" title="LinkedIn">
     <img src="pic/linkedin.png" alt="LinkedIn" class="contact-icon">
   </a>
+  <a href="https://scholar.google.com.hk/citations?user=wgqWMcUAAAAJ&hl=en&oi=sra" target="_blank" title="LinkedIn">
+    <img src="pic/google_scholar.png" alt="Google_scholar" class="contact-icon">
+  </a>
 </div>
 
 <p> I'm a bioinformatician, working on <span class="blue-bold">AI-driven Digital Animal Health</span> and <span class="blue-bold">Health Informatics</span>. My work seeks to improve animal's health and well-being through unlocking the potential of <span class="blue-bold">ubiquitous data </span> (i.e., macro-level physiological records, wearable time-series and medical images, and micro-level genome, microbiome and spectroscopy), and <span class="blue-bold">cutting-edge AI techniques</span> (i.e., predictive and interpretable machine and deep learning models). My research includes projects on human, mammals, and insects from the Americas and Eurasia.
