Update heading for undergraduate work section

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ dl862@cornell.edu
 
 
 	<div class="pv1" id="ccgp">
-		<h3>My undergraduate work</h3>
+		<h3>Previous work during my undergraduate studies</h3>
 	  
 		<table class="pub-table">
 			<tr>
